--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-    <header id="home" class="welcome-area">
+    <section id="home" class="welcome-area">
         {% include top_nav.html %}
         {% include welcome.html %}
-    </header>
+    </section>
 
     {{ content }}
