--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,9 +2,9 @@
 layout: default
 ---
 
-    <header id="home">
+    <section id="home">
         {% include top_nav.html %}
-    </header>
+    </section>
 
     {{ content }}
 
