--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>{% if page.title %}{{ page.title }} - {{site.title}}{% else %}{{ site.title }}{% endif %}</title>
+    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-    <!-- Edit site and author settings in `_config.yml` to make the social details your own -->
-    
     <!-- site name -->
     <meta content="{{ site.title }}" property="og:site_name">
 
@@ -30,47 +28,43 @@
     {% if page.type  %}
     <meta content="{{page.type}}" property="og:type">
     {% else %}
-    <meta content="website" property="og:type">
+    <meta content="portfolio" property="og:type">
     {% endif %}
 
     {% if page.type == "article" %}
 
-    	    {% if page.url %}
-    	    <meta content="{{ site.url }}{{ page.url }}" property="og:url">
-            {% endif %}
+    {% if page.url %}
+    <meta content="{{ page.url | prepend: site.url }}" property="og:url">
+    {% endif %}
 
-	    {% if page.date %}
-	    <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
-	    {% endif %}
+    {% if page.date %}
+    <meta content="{{ page.date | date_to_xmlschema }}" property="article:published_time">
+    {% endif %}
 
-	    {% if page.author %}
-	    <meta content="{{ site.url }}/{{page.author}}/" property="article:author">    
-	    {% else %}
-	    <meta content="{{ site.url }}/about/" property="article:author">
-	    {% endif %}
+    <meta content="{{ "#about" | prepend: site.baseurl | prepend: site.url }}" property="article:author">
 
-	    {% if page.img %}
-	    <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/{{ page.img }}" property="og:image">
-	    {% else %}
-	    <meta content="{{ site.url }}{{ site.baseurl }}/assets/img/authors/{{ site.author-img }}" property="og:image">
-	    {% endif %}
+    {% if page.images %}
+    {% assign img = page.images | first %}
+    <meta content="{{ "/assets/img/post" | prepend: site.baseurl | prepend: site.url | append: img }}" property="og:image">
+    {% else %}
+    <meta content="{{ "/assets/img/authors/" | prepend: site.baseurl | prepend: site.url | append: site.data.author.Image }}" property="og:image">
+    {% endif %}
 
-	    {% if page.categories %}
-	      {% for category in page.categories limit:1 %}
-	      <meta content="{{ category }}" property="article:category">
-	      {% endfor %}
-	    {% endif %}
-	    
-	    {% if page.tags %}
-	      {% for tag in page.tags %}
-	      <meta content="{{ tag }}" property="article:tag">
-	      {% endfor %}
-	    {% endif %}
+    {% if page.categories %}
+    {% assign category = page.categories | first %}
+    <meta content="{{ category }}" property="article:category">
+    {% endif %}
+
+    {% if page.tags %}
+    {% for tag in page.tags %}
+    <meta content="{{ tag }}" property="article:tag">
+    {% endfor %}
+    {% endif %}
 
     {% endif %}
 
     <!-- site author -->
-    <meta name="author" content="{{site.author}}">
+    <meta name="author" content="{{site.data.author.Name}}">
 
     <!-- site icon -->
     <link rel="shortcut icon" href="{{ "/assets/img/favicon/favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
@@ -88,9 +82,9 @@
     <link rel="stylesheet" href="{{ "/normalize/5.0.0/normalize.min.css" | prepend: site.cdn_url }}" >
     
     <!-- Google Fonts -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,700" >
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700" >
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Montserrat:300,400,500,600,700,800,900|Dancing+Script:400,700&subset=latin-ext" >
+    <link rel="stylesheet" href="{{ "/css?family=PT+Serif:400,700" | prepend: site.google_font_url }}" >
+    <link rel="stylesheet" href="{{ "/css?family=Lato:300,400,700" | prepend: site.google_font_url }}" >
+    <link rel="stylesheet" href="{{ "/css?family=Poppins:300,400,500,600,700|Montserrat:300,400,500,600,700,800,900|Dancing+Script:400,700&subset=latin-ext" | prepend: site.google_font_url }}" >
 
     <!-- styles -->
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | prepend: site.baseurl }}" >
