--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -1,27 +1,27 @@
-            <div id="pagination">
-            	<nav>
-					<ul class="pagination blog_pagination">
-						{% if paginator.previous_page %}
-						<li>
-							<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="black-icon" aria-label="Previous">
-								<span aria-hidden="true"><i class="fa fa-chevron-left" aria-hidden="true"></i></span>
-							</a>
-						</li>
-						{% endif %}
-						{% for page_num in (1..paginator.total_pages) %}
-						{% if page_num == 1 %}
-						<li><a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page_num }}</a></li>
-    					{% else %}
-						<li><a href="{{ site.baseurl }}/blog/page/{{ page_num }}/">{{page_num}}</a></li>
-						{% endif %}
-						{% endfor %}
-						{% if paginator.next_page %}
-						<li>
-							<a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="black-icon" aria-label="Next">
-								<span aria-hidden="true"><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
-							</a>
-						</li>
-						{% endif %}
-					</ul>
-				</nav>
-			</div>
+<div id="pagination">
+	<nav>
+		<ul class="pagination blog_pagination">
+			{% if paginator.previous_page %}
+			<li>
+				<a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="black-icon" aria-label="Previous">
+					<span aria-hidden="true"><i class="fa fa-chevron-left" aria-hidden="true"></i></span>
+				</a>
+			</li>
+			{% endif %}
+			{% for page_num in (1..paginator.total_pages) %}
+			{% if page_num == 1 %}
+			<li ><a class="{% if paginator.page == page_num  %}active{% endif %}" href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">{{ page_num }}</a></li>
+			{% else %}
+			<li><a class="{% if paginator.page == page_num  %}active{% endif %}" href="{{ site.baseurl }}/blog/page/{{ page_num }}/">{{page_num}}</a></li>
+			{% endif %}
+			{% endfor %}
+			{% if paginator.next_page %}
+			<li>
+				<a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}" class="black-icon" aria-label="Next">
+					<span aria-hidden="true"><i class="fa fa-chevron-right" aria-hidden="true"></i></span>
+				</a>
+			</li>
+			{% endif %}
+		</ul>
+	</nav>
+</div>
