--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -1,4 +1,4 @@
-<div class="header-top-area">
+<header class="header-top-area">
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
@@ -10,7 +10,7 @@
             </div>
             <div class="col-md-6 col-md-offset-1 col-sm-8">
                 <!-- START MENU DESIGN AREA -->
-                <div class="mainmenu">	
+                <nav class="mainmenu">
                     <div class="navbar navbar-nobg">
                         <div class="navbar-header">
                             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,9 +30,9 @@
                             </ul>
                         </div>
                     </div>
-                </div>
+                </nav>
                 <!-- END MENU DESIGN AREA -->
             </div>
         </div>
     </div>
-</div>
+</header>
