--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -25,7 +25,7 @@
                                 <li><a class="smoth-scroll" href="{% if  page.url != '/' %}{{site.url}}{% endif %}#about">About</a></li>
                                 <li><a class="smoth-scroll" href="{% if  page.url != '/' %}{{site.url}}{% endif %}#project">Projets</a></li>
                                 <li><a href="{{ "/assets/pdf/resume.pdf" | prepend: site.baseurl }}" target="_blank">Resume</a></li>
-                                <!--li><a href="{{site.url}}/blog">Blog</a></li-->
+                                <li><a href="{{site.url}}/blog">Blog</a></li>
                                 <li><a class="smoth-scroll" href="{% if  page.url != '/' %}{{site.url}}{% endif %}#contact">Contact</a></li>
                             </ul>
                         </div>
