first article published

--- a/_includes/blog_sidebar.html
+++ b/_includes/blog_sidebar.html
@@ -11,7 +11,7 @@
 		<div class="widget about-me">
 			<h5 class="widgetheading">about me</h5>
 			{% if site.data.author.Image %}
-			<img src="{{ '/assets/img/authors/' | prepend: site.baseurl | append: site.data.author.Image }}" alt="{{ site.data.author.Name }}">
+			<img src="{{ '/assets/img/authors/' | prepend: site.baseurl | append: site.data.author.BWImage }}" alt="{{ site.data.author.Name }}">
 			{% endif %}
 			<p>I'm a {{ site.data.author.Title}}, {{ site.data.author.About | truncatewords: 30 }}</p>
 		</div>
