add disqus comment box

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,6 +63,8 @@ layout: page
 				</div>
 
 			</div>
+			<br/>
+			{% include disqus.html %}
 		</div>
 		<!-- START BLOG SIDEBAR DESIGN AREA -->
 		<div class="col-md-3 col-md-offset-0 col-sm-10 col-sm-offset-1">
