--- a/_includes/top_nav.html
+++ b/_includes/top_nav.html
@@ -23,7 +23,7 @@
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a class="smoth-scroll" href="{% if  page.url != '/' %}{{site.url}}{% endif %}#home">Home</a></li>
                                 <li><a class="smoth-scroll" href="{% if  page.url != '/' %}{{site.url}}{% endif %}#about">About</a></li>
-                                <li><a class="smoth-scroll" href="{% if  page.url != '/' %}{{site.url}}{% endif %}#project">Projets</a></li>
+                                <li><a class="smoth-scroll" href="{% if  page.url != '/' %}{{site.url}}{% endif %}#project">Projects</a></li>
                                 <li><a href="{{ "/assets/pdf/resume.pdf" | prepend: site.baseurl }}" target="_blank">Resume</a></li>
                                 <li><a href="{{site.url}}/blog">Blog</a></li>
                                 <li><a class="smoth-scroll" href="{% if  page.url != '/' %}{{site.url}}{% endif %}#contact">Contact</a></li>
